# wire-cli

./: .gitignore  Cargo.toml
examples/: simple.rs
src/: lib.rs  tui.rs
