[package]
name = "wire-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wire = { git = "https://github.com/Instant-Reactive-Systems/wire.git" }
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
ratatui = { version = "0.29", features = ["serde"] }
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt", "net", "time"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
tokio-tungstenite = { version = "0.27" }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
